src/app/styles/Projects.module.css
.gridCont {
    position: relative;
} 

.projectTitle {
    display: flex;
    align-items: baseline;
    margin-bottom: 5px;
    font-weight: 400;
    grid-area: title;
}

.svg {
    position: relative;
    top: -2px;
    margin-left: 10px;
    
}

.svg svg {
    transition: transform 0.3s ease;
}


.tags {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    grid-area: tags;
}

.tags span {
    margin-right: 12px;
    color: #989898;
    font-size: 0.875rem;
    font-weight: 500;
}

.projectImg {
    transition: 0.3s ease;
    grid-area: image;
 
}

.projectImg img {
    border-radius: 5px;
    object-fit: cover;
    transition: 0.3s ease;
}

.projectLinkCont {
    display: inline-grid;
    padding: 1em 1em 1em 0;
    grid-template-columns: minmax(100px, 400px) 250px;
    grid-template-rows: auto;
    grid-template-areas: 
    "title image"
    "tags image";
}

.projectLinkCont:hover .projectImg img {
    display: block;
    transition: 0.3s ease;

}

.projectImgOnHover {
    position: absolute;
    top: 0; 
    right: 1rem; 
    display: block;
    z-index: 10; /* Ensure it's above other content */
}


@media only screen and (max-width: 725px) {
    .projectLinkCont:hover .projectImg img {
        display: none;
    }

    .tags {
        flex-wrap: nowrap;
    }

    .projectLinkCont {
        display: flex;
        flex-direction: column;
    }
}

@media only screen and (max-width: 440px) {
    .projectTitle {
        font-size: 1rem;
    }
  }

